--- a/index.html
+++ b/index.html
@@ -5,9 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    
+    <title>HTML Scientific paper</title>
   </head>
   <body>
+    <header>
+      <h1>Incremental and Decremental Support Vector Machine Learning</h1>
+      <hr />
+      <h2>Gert Cauwenberghs</h2>
+      <p>
+        CLSP, ECE Dept. <br />
+        <br />
+        John Hopkins University <br />
+        <br />
+        Baltimore, MD 21218 <br />
+        <br />
+        <em>gert@jhu.edu</em>
+      </p>
+    </header>
+    <h2>Abstract</h2>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia
+      voluptate cumque unde obcaecati fugiat earum suscipit, ex pariatur porro
+      esse quas tempora quisquam? Adipisci, velit maiores quae nihil obcaecati
+      alias. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Necessitatibus voluptatum incidunt beatae similique vel. Commodi beatae
+      sit omnis quos laboriosam, sunt dicta nisi id quia unde? Enim suscipit
+      porro rem.
+    </p>
+    <ol>
+      <li>
+        <strong>Introduction</strong> <br />
 
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit ex
+          quisquam labore officiis, doloribus dolorem? Quam similique odio
+          obcaecati, laudantium voluptatibus atque dolore quisquam dolorum unde
+          blanditiis? Magni, ad excepturi. Lorem ipsum dolor sit amet
+          consectetur adipisicing elit. Ullam, veniam explicabo. Sapiente id
+          magni a rem recusandae labore, molestias eos ipsam at quas, error,
+          sequi voluptas. Neque minus fuga cumque.
+        </p>
+
+        <img
+          src="https://docs.opencv.org/2.4/_images/optimal-hyperplane.png"
+          alt="Graph showing specs"
+        />
+      </li>
+    </ol>
+    <a href="https://en.wikipedia.org/wiki/Support_vector_machine"
+      >Go to Wikipedia to know more</a
+    >
   </body>
 </html>
